--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="/monit.css" />
+        <title>sockets list</title>
     </head>
     <body>
-    dffsfs
+    <div id="box-list"></div>
+    <div id="box-cmd"></div>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/monit.js"></script>
     </body>
 </html>
